--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,36 @@
+body {
+    background-color: bisque;
+}
 
 .container{
     display: flex;
     flex-direction: column;
-    outline: 2px solid black;
 
     padding: 10px;
     margin: 20px 170px;
+    border-radius: 30px;
     box-shadow: 5px 5px 15px black;
 }
 
 .input_elem{
+    padding: 50px 100px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+input {
+    padding: 20px 150px;
+    border: 2px solid black;
+    border-radius: 30px;
+}
+
+input:hover {
+    box-shadow: 0 2px 4px gray;
+}
+
+.info {
+    color: gray;
 }
